--- a/template/SarahMorin-resume.tex
+++ b/template/SarahMorin-resume.tex
@@ -47,10 +47,10 @@
 
 \documentclass[]{deedy-resume-openfont}
 \usepackage{fancyhdr}
- 
+
 \pagestyle{fancy}
 \fancyhf{}
- 
+
 \begin{document}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -66,180 +66,156 @@
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \namesection{Sarah}{Morin}
+{  \urlstyle{same} 950 24$^{th}$ Street NW, Apt. 905, Washington, DC 20037 \\
+ \href{mailto:sarahmorin@gwu.edu}{sarahmorin@gwu.edu} | 603.998.6402 }
 
-% TODO: Create info and URL section
-% { \urlstyle{same}\href{}{debarghyadas.com}| \href{http://fb.co/dd}{fb.co/dd}\\
-% \href{mailto:deedy@fb.com}{deedy@fb.com} | 607.379.5733 | \href{mailto:dd367@cornell.edu}{dd367@cornell.edu}
-% }
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%
-%     COLUMN ONE
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+ %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+ %
+ %     COLUMN ONE
+ %
+ %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{minipage}[t]{0.33\textwidth} 
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%     EDUCATION
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+        %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+        %     SKILLS
+        %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+        \section{Skills}
+        \subsection{Programming}
+        Java \textbullet{}  Python \textbullet{} C \\
+        SQL \textbullet{} Assembly \textbullet{} \LaTeX\ \\ 
+        HTML \textbullet{} PHP \textbullet{} MATLAB \\
+        \sectionsep
+        \subsection{Operating Systems}
+        Linux \textbullet{} Windows \\
+        \sectionsep
+        \subsection{Languages}
+        English (Native) \textbullet{} Spanish (Advanced)\\
+        \sectionsep
 
-        %% TODO
+        %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+        %     COURSEWORK
+        %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Education} 
+        \section{Coursework}
+        Operating Systems\\
+        Foundations of Computing\\
+        Algorithms\\
+        Continuous Algorithms\\
+        Number Theory\\
+        Systems Programing\\
+        Database Systems\\
+        Software Engineering\\
+        Computer Architecture\\
+        Discrete Structures I \& II \\
 
-%\subsection{Cornell University}
-%\descript{MEng in Computer Science}
-%\location{Dec 2014 | Ithaca, NY}
-%\sectionsep
-%
-%\subsection{Cornell University}
-%\descript{BS in Computer Science}
-%\location{May 2014 | Ithaca, NY}
-%College of Engineering \\
-%Magna Cum Laude\\
-%\location{ Cum. GPA: 3.83 / 4.0 \\
-%Major GPA: 3.9 / 4.0}
-%\sectionsep
-%
-%\subsection{La Martiniere for Boys}
-%\location{Grad. May 2011|  Kolkata, India}
-% \sectionsep
+        %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+        %     LINKS
+        %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+        \section{Links}
+        Github:// \href{https://github.com/smorin8674}{\bf smorin8674}\\
+        LinkedIn://  \href{https://www.linkedin.com/in/sarah-morin-500603165/}{\bf Sarah Morin} \\
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%     LINKS
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% TODO
-\section{Links} 
-%Facebook:// \href{https://facebook/dd}{\bf dd} \\
-%Github:// \href{https://github.com/deedydas}{\bf deedydas} \\
-%LinkedIn://  \href{https://www.linkedin.com/in/debarghyadas}{\bf debarghyadas} \\
-%YouTube://  \href{https://www.youtube.com/user/DeedyDash007}{\bf DeedyDash007} \\
-%Twitter://  \href{https://twitter.com/debarghya_das}{\bf @debarghya\_das} \\
-%Quora://  \href{https://www.quora.com/Debarghya-Das}{\bf Debarghya-Das}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%     COURSEWORK
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\section{Coursework}
-% TODO
-%
-%\subsection{Graduate}
-%Advanced Machine Learning \\
-%Open Source Software Engineering \\
-%Advanced Interactive Graphics \\
-%Compilers + Practicum \\
-%Cloud Computing \\
-%Evolutionary Computation \\
-%Defending Computer Networks \\
-%Machine Learning \\
-%\sectionsep
-%
-%\subsection{Undergraduate}
-%Information Retrieval \\
-%Operating Systems \\
-%Artificial Intelligence + Practicum \\
-%Functional Programming \\
-%Computer Graphics + Practicum \\
-%{\footnotesize \textit{\textbf{(Research Asst. \& Teaching Asst 2x) }}} \\
-%Unix Tools and Scripting \\
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%     SKILLS
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% TODO
-%
-%\section{Skills}
-%\subsection{Programming}
-%\location{Over 5000 lines:}
-%Java \textbullet{}   Shell \textbullet{} Python \textbullet{} Javascript \\
-%OCaml \textbullet{} Matlab \textbullet{} Rails \textbullet{} \LaTeX\ \\ 
-%\location{Over 1000 lines:}
-%C \textbullet{} C++ \textbullet{} CSS \textbullet{} PHP \textbullet{} Assembly \\
-%\location{Familiar:}
-%AS3 \textbullet{} iOS \textbullet{} Android \textbullet{} MySQL
-% \sectionsep
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%
-%     COLUMN TWO
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+        %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+        %
+        %     COLUMN TWO
+        %
+        %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \end{minipage} 
 \hfill
 \begin{minipage}[t]{0.66\textwidth} 
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%     EXPERIENCE
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+        %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+        %     EDUCATION
+        %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+        \section{Education} 
+        \subsection{The George Washington University}
+        \descript{BS in Computer Science, Minor in Mathematics}
+        \location{Expected May 2021 | Washington, DC}
+        School of Engineering and Applied Science\\
+        \location{GPA: 3.84 / 4.0}
+        \sectionsep
+
+        \subsection{Digistal Forensics and Cyber Security Program}
+        \descript{Pre-College Program | Champlain College}
+        \location{July 2016 | Leahy center for Digital Investigation}
+    
+        %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+        %     RESEARCH
+        %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+        \section{Research}
+        \runsubsection{AURROR}
+        \descript{| Undergraduate Researcher}
+        \location{Professor Poorvi Vora | Department of Computer Science}
+        \location{March 2019 - Present | The George Washington University}
+        %% TODO descritpion
+        \sectionsep
+
+        %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+        %     EXPERIENCE
+        %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
         %% TODO
 
-\section{Experience}
-%\runsubsection{Facebook}
-%\descript{| Software Engineer }
-%\location{Jan 2015 - Present | New York, NY}
-%\sectionsep
-%
-%\runsubsection{Coursera}
-%\descript{| KPCB Fellow + Software Engineering Intern }
-%\location{June 2014 – Sep 2014 | Mountain View, CA}
-%\vspace{\topsep} % Hacky fix for awkward extra vertical space
-%\begin{tightemize}\item 52 out of 2500 applicants chosen to be a KPCB Fellow 2014.
-%\item Led and shipped Yoda - the admin interface for the new Phoenix platform. 
-%\item Full-stack developer - Wrote and reviewed code for JS using Backbone, Jade, Stylus and Require and Scala using Play
-%\end{tightemize}
-%\sectionsep
-%
-%\runsubsection{Google}
-%\descript{| Software Engineering Intern }
-%\location{May 2013 – Aug 2013 | Mountain View, CA}
-%\begin{tightemize}
-%\item Worked on the YouTube Captions team, in Javascript and Python to plan, to design and develop the full stack to add and edit Automatic Speech Recognition captions. In production.\item Created a backbone.js-like framework for the Captions editor.\end{tightemize}
-%\sectionsep
-%
-%\runsubsection{Phabricator}
-%\descript{| Open Source Contributor \& Team Leader}
-%\location{Jan 2013 – May 2013 | Palo Alto, CA \& Ithaca, NY}
-%\begin{tightemize}
-%\item Phabricator is used daily by Facebook, Dropbox, Quora, Asana and more.\item I created the Meme generator and more in PHP and Shell.\item Led a team from MIT, Cornell, IC London and UHelsinki for the project.\end{tightemize}
-% \sectionsep
+        \section{Experience}
+        \runsubsection{The George Washington University}
+        \descript{| Teaching Assistant}
+        \location{Jan. 2019 - Present | Washington, DC}
+        \vspace{\topsep} % fix for spacing prob
+        \begin{tightemize} 
+                \item CSCI 2461: Computer Architecture | Fall, 2019
+                \item CSCI 1311: Discrete Structures I | Spring, 2019
+        \end{tightemize}
+        \sectionsep
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%     RESEARCH
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% TODO
-%% QUESTION: Do I keep this??
+        \runsubsection{GC Engineering}
+        \descript{| Receptionist}
+        \location{June 2017 - Present | Laconia, NH}
+        \sectionsep
 
-\section{Research}
-%\runsubsection{Cornell Robot Learning Lab}
-%\descript{| Researcher}
-%\location{Jan 2014 – Jan 2015 | Ithaca, NY}
-%Worked with \textbf{\href{http://www.cs.cornell.edu/~ashesh/}{Ashesh Jain}} and \textbf{\href{http://www.cs.cornell.edu/~asaxena/}{Prof Ashutosh Saxena}} to create \textbf{PlanIt}, a tool which  learns from large scale user preference feedback to plan robot trajectories in human environments.  
-%\sectionsep
-%
-%\runsubsection{Cornell Phonetics Lab}
-%\descript{| Head Undergraduate Researcher}
-%\location{Mar 2012 – May 2013 | Ithaca, NY}
-%Led the development of \textbf{QuickTongue}, the first ever breakthrough tongue-controlled game with \textbf{\href{http://conf.ling.cornell.edu/~tilsen/}{Prof Sam Tilsen}} to aid in Linguistics research. 
-% \sectionsep
+
+        %\runsubsection{Facebook}
+        %\descript{| Software Engineer }
+        %\location{Jan 2015 - Present | New York, NY}
+        %\sectionsep
+        %
+        %\runsubsection{Coursera}
+        %\descript{| KPCB Fellow + Software Engineering Intern }
+        %\location{June 2014 – Sep 2014 | Mountain View, CA}
+        %\vspace{\topsep} % Hacky fix for awkward extra vertical space
+        %\begin{tightemize}\item 52 out of 2500 applicants chosen to be a KPCB Fellow 2014.
+        %\item Led and shipped Yoda - the admin interface for the new Phoenix platform. 
+        %\item Full-stack developer - Wrote and reviewed code for JS using Backbone, Jade, Stylus and Require and Scala using Play
+        %\end{tightemize}
+        %\sectionsep
+        %
+        %\runsubsection{Google}
+        %\descript{| Software Engineering Intern }
+        %\location{May 2013 – Aug 2013 | Mountain View, CA}
+        %\begin{tightemize}
+        %\item Worked on the YouTube Captions team, in Javascript and Python to plan, to design and develop the full stack to add and edit Automatic Speech Recognition captions. In production.\item Created a backbone.js-like framework for the Captions editor.\end{tightemize}
+        %\sectionsep
+        %
+        %\runsubsection{Phabricator}
+        %\descript{| Open Source Contributor \& Team Leader}
+        %\location{Jan 2013 – May 2013 | Palo Alto, CA \& Ithaca, NY}
+        %\begin{tightemize}
+        %\item Phabricator is used daily by Facebook, Dropbox, Quora, Asana and more.\item I created the Meme generator and more in PHP and Shell.\item Led a team from MIT, Cornell, IC London and UHelsinki for the project.\end{tightemize}
+        % \sectionsep
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     AWARDS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% TODO
 
 \section{Awards} 
-%\begin{tabular}{rll}
-%2014	     & top 52/2500  & KPCB Engineering Fellow\\
-%2014	     & 1\textsuperscript{st}/50  & Microsoft Coding Competition, Cornell\\
-%2013	     & National  & Jump Trading Challenge Finalist\\
-%2013     & 7\textsuperscript{th}/120 & CS 3410 Cache Race Bot Tournament  \\
-%2012     & 2\textsuperscript{nd}/150 & CS 3110 Biannual Intra-Class Bot Tournament \\
-%2011     & National & Indian National Mathematics Olympiad (INMO) Finalist \\
-%\end{tabular}
-% \sectionsep
+\begin{tabular}{rll}
+        2019 & GWU & {\bf Steve and Sheller Heller Prze} \\ 
+        2019 & GWU & {\bf Clare Boothe Luce Scholar} \\
+\end{tabular}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     PUBLICATIONS
@@ -247,7 +223,7 @@
 %% TODO
 %% NOTE: will also need to fix publiction.bib file
 
-\section{Publications} 
+% \section{Publications} 
 %\renewcommand\refname{\vskip -1.5cm} % Couldn't get this working from the .cls file
 %\bibliographystyle{abbrv}
 %\bibliography{publications}
