--- a/template/SarahMorin-resume.tex
+++ b/template/SarahMorin-resume.tex
@@ -202,7 +202,8 @@
         % \end{tightemize}
         \begin{tabular}{rlr}
                 % TODO add systems
-                CSCI 2461 & Computer Architecture & Fall, 2019 \\
+                CSCI 3410 & Systems Programming   & Spring 2020\\
+                CSCI 2461 & Computer Architecture & Fall 2019 \\
                 CSCI 1311 & Discrete Structures I & Spring 2019 \\
         \end{tabular}
         \sectionsep
@@ -218,6 +219,8 @@
         \section{Projects}
         \descript{Multivariate Hypergeometric Distribution Sampling Tool}
         \location{Python}
+        \descript{Mutexes and Futexes (xv6 OS)}
+        \location{C}
         \descript{Course Registraion System}
         \location{MySQL, HTML, PHP, CSS}
         \descript{Encryption/Decryption with Caesar Cipher/OTP}
