updated research description for R2B2.
update r2b2, shortened Champlain description, updated GPA.

--- a/template/SarahMorin-resume.tex
+++ b/template/SarahMorin-resume.tex
@@ -153,7 +153,7 @@
         \descript{BS in Computer Science, Minor in Mathematics}
         School of Engineering and Applied Science\\
         \location{Expected May 2021 | Washington, DC}
-        \location{GPA: 3.84 / 4.0}
+        \location{GPA: 3.85 / 4.0}
         \vspace{\topsep}
         \begin{tightemize}
         \item Conecntration: Cybersecurity, Crytopgraphy
@@ -165,7 +165,7 @@
         \location{July 2016 | Leahy center for Digital Investigation}
         \vspace{\topsep}
         \begin{tightemize}
-        \item Learned basic cyber security and digital forensics skills such as computer and network security, vulnerability exploitation, mobile device forensics, and security protocols for sensitive data.
+        \item Learned basic cyber security and digital forensics skills such as computer and network security and vulnerability exploitation.
         \item Used state of the art technologies including TCPDump, Wireshark, and NMAP.
         \end{tightemize}
 
@@ -175,11 +175,12 @@
         %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
         \section{Research}
-        \runsubsection{AURROR}
+        \runsubsection{R2B2}
         \descript{| Undergraduate Researcher}
         \descript{Professor Poorvi Vora | Dept. of Computer Science}
-        \location{September 2019 - Present | The George Washington University}
-        %% TODO descritpion
+        \location{September 2021 - Present | The George Washington University}
+        Developed open source library to execute risk-limiting ballot polling audits inlcuding a Bayesian approach and a convolution approach.
+        
         \sectionsep
         \runsubsection{Bayesian Risk Limiting Audits}
         \descript{| Undergraduate Researcher}
