--- a/template/SarahMorin-resume.tex
+++ b/template/SarahMorin-resume.tex
@@ -109,7 +109,7 @@
         Algorithms\\
         Continuous Algorithms\\
         Number Theory\\
-        Systems Programing\\
+        Systems Programming\\
         Database Systems\\
         Software Engineering\\
         Computer Architecture\\
@@ -125,6 +125,33 @@
         {\bf Clare Booth Luce Scholar} \\
 
         %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+        % Projects
+        %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+        \section{Projects}
+
+        \textbf{Multivariate Hypergeometric \\Distribution Sampling \\Tool} Python\\
+        \textbf{Mutexes and Futexes (xv6 OS)} C\\
+        \textbf{Course Registration System} \\MySQL, HTML, PHP, CSS\\
+        \textbf{Encryption/Decryption with Caesar \\Cipher/OTP} LC3 Assembly\\
+        \textbf{Search Engine (Text Files)} C\\
+        \textbf{Chat Room} Java\\
+
+%        \descript{Multivariate Hypergeometric Distribution Sampling Tool}
+%        \location{Python}
+%        \descript{Mutexes and Futexes (xv6 OS)}
+%        \location{C}
+%        \descript{Course Registraion System}
+%        \location{MySQL, HTML, PHP, CSS}
+%        \descript{Encryption/Decryption with Caesar Cipher/OTP}
+%        \location{LC3 Assembly}
+%        \descript{Search Engine | Text Files}
+%        \location{C}
+%        \descript{Chat Room}
+%        \location{Java}
+
+
+
+        %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
         %     LINKS
         %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
         % TODO: use logos instead??
@@ -132,6 +159,9 @@
         \section{Links}
         Github:// \href{https://github.com/smorin8674}{\bf smorin8674}\\
         LinkedIn://  \href{https://www.linkedin.com/in/sarah-morin-500603165/}{\bf Sarah Morin} \\
+
+
+
 
         %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
         %
@@ -155,12 +185,12 @@
         \location{Expected May 2021 | Washington, DC}
         \location{GPA: 3.85 / 4.0}
         \vspace{\topsep}
-        \begin{tightemize}
-        \item Conecntration: Cybersecurity, Crytopgraphy
-        \end{tightemize}
+     %   \begin{tightemize}
+     %   \item Concentration: Cybersecurity, Cryptography
+     %   \end{tightemize}
         \sectionsep
 
-        \subsection{Digistal Forensics and Cyber Security Program}
+        \subsection{Digital Forensics and Cyber Security Program}
         \descript{Pre-College Program | Champlain College}
         \location{July 2016 | Leahy center for Digital Investigation}
         \vspace{\topsep}
@@ -169,6 +199,27 @@
         \item Used state of the art technologies including TCPDump, Wireshark, and NMAP.
         \end{tightemize}
 
+        %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+        %     PUBLICATIONS
+        %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+        %% TODO
+        %% NOTE: will also need to fix publiction.bib file
+
+        \section{Publications}
+        \subsection{Peer-Reviewed Conference Papers}
+        \vspace{\topsep}
+        \begin{tightemize}
+        \item[1] Sarah Morin, Grant McClearn, Neal McBurnett, Poorvi Vora, Filip Zag\'{o}rski, "A Note on Risk-Limiting Bayesian Polling Audits for Two-Candidate Elections", 5th Workshop on Advances in Secure Electronic Voting, A Workshop Associated with Financial Crypto 2020, \textit{Voting 2020}.
+        \end{tightemize}
+        \sectionsep
+        \subsection{Posters}
+        Grant McClearn, Sarah Morin, Neal McBurnett, Poorvi L. Vora, Filip Zag\'{o}rski, "A New Statistical Audit for Real Elections"
+        \vspace{\topsep}
+        \begin{tightemize}
+                \item Honorable mention for poster presentation at SEAS R\&D Showcase 2019.\\
+                \item Presented at NSF Undergraduate track in the Secure and Trustworthy Cyberspace biennial PI meeting, 2019.
+        \end{tightemize}
+        
 
         %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
         %     RESEARCH
@@ -178,9 +229,15 @@
         \runsubsection{R2B2}
         \descript{| Undergraduate Researcher}
         \descript{Professor Poorvi Vora | Dept. of Computer Science}
-        \location{September 2021 - Present | The George Washington University}
-        Developed open source library to execute risk-limiting ballot polling audits inlcuding a Bayesian approach and a convolution approach.
+        \location{September 2019 - Present | The George Washington University}
+        Developed open source library to execute risk-limiting ballot polling audits including a Bayesian approach and a convolution approach.
         
+        \sectionsep
+        \runsubsection{Research Experience for Undergraduates}
+        \descript{| Scholarship}
+        \location{January 2019 - Present}
+        Funeded by NSF Awards 1421373 and 2015253.
+
         \sectionsep
         \runsubsection{Bayesian Risk Limiting Audits}
         \descript{| Undergraduate Researcher}
@@ -209,40 +266,11 @@
         \end{tabular}
         \sectionsep
 
-        \runsubsection{GC Engineering}
-        \descript{| Receptionist}
-        \location{June 2017 - Present | Laconia, NH}
-        \sectionsep
+     %   \runsubsection{GC Engineering}
+     %   \descript{| Receptionist}
+     %   \location{June 2017 - Present | Laconia, NH}
+     %   \sectionsep
 
-        %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-        % Projects
-        %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-        \section{Projects}
-        \descript{Multivariate Hypergeometric Distribution Sampling Tool}
-        \location{Python}
-        \descript{Mutexes and Futexes (xv6 OS)}
-        \location{C}
-        \descript{Course Registraion System}
-        \location{MySQL, HTML, PHP, CSS}
-        \descript{Encryption/Decryption with Caesar Cipher/OTP}
-        \location{LC3 Assembly}
-        \descript{Search Engine | Text Files}
-        \location{C}
-        \descript{Chat Room}
-        \location{Java}
-
-
-        %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-        %     PUBLICATIONS
-        %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-        %% TODO
-        %% NOTE: will also need to fix publiction.bib file
-
-        % \section{Publications}
-        %\renewcommand\refname{\vskip -1.5cm} % Couldn't get this working from the .cls file
-        %\bibliographystyle{abbrv}
-        %\bibliography{publications}
-        %\nocite{*}
 
 \end{minipage}
 \end{document}  \documentclass[]{article}
