--- a/template/SarahMorin-resume.tex
+++ b/template/SarahMorin-resume.tex
@@ -157,7 +157,7 @@
         % TODO: use logos instead??
 
         \section{Links}
-        Github:// \href{https://github.com/smorin8674}{\bf smorin8674}\\
+        Github:// \href{https://github.com/sarahmorin}{\bf sarahmorin}\\
         LinkedIn://  \href{https://www.linkedin.com/in/sarah-morin-500603165/}{\bf Sarah Morin} \\
 
 
