--- a/template/SarahMorin-resume.tex
+++ b/template/SarahMorin-resume.tex
@@ -66,7 +66,7 @@
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \namesection{Sarah}{Morin}
-{  \urlstyle{same} 950 24$^{th}$ Street NW, Apt. 905, Washington, DC 20037 \\
+{  \urlstyle{same} 822 25$^{th}$ Street NW, Washington, DC 20037 \\
 \href{mailto:sarahmorin@gwu.edu}{sarahmorin@gwu.edu} | 603.998.6402 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -129,6 +129,7 @@
         %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
         \section{Projects}
 
+        \textbf{R2B2 Audit Tool} Python\\
         \textbf{Multivariate Hypergeometric \\Distribution Sampling \\Tool} Python\\
         \textbf{Mutexes and Futexes (xv6 OS)} C\\
         \textbf{Course Registration System} \\MySQL, HTML, PHP, CSS\\
@@ -183,7 +184,7 @@
         \descript{BS in Computer Science, Minor in Mathematics}
         School of Engineering and Applied Science\\
         \location{Expected May 2021 | Washington, DC}
-        \location{GPA: 3.85 / 4.0}
+        \location{GPA: 3.87 / 4.0}
         \vspace{\topsep}
      %   \begin{tightemize}
      %   \item Concentration: Cybersecurity, Cryptography
@@ -219,7 +220,7 @@
                 \item Honorable mention for poster presentation at SEAS R\&D Showcase 2019.\\
                 \item Presented at NSF Undergraduate track in the Secure and Trustworthy Cyberspace biennial PI meeting, 2019.
         \end{tightemize}
-        
+
 
         %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
         %     RESEARCH
@@ -231,7 +232,7 @@
         \descript{Professor Poorvi Vora | Dept. of Computer Science}
         \location{September 2019 - Present | The George Washington University}
         Developed open source library to execute risk-limiting ballot polling audits including a Bayesian approach and a convolution approach.
-        
+
         \sectionsep
         \runsubsection{Research Experience for Undergraduates}
         \descript{| Scholarship}
@@ -258,10 +259,10 @@
         % \begin{tightemize}
         % \item
         % \end{tightemize}
-        \begin{tabular}{rlr}
+        \begin{tabular}{rll}
                 % TODO add systems
                 CSCI 3410 & Systems Programming   & Spring 2020\\
-                CSCI 2461 & Computer Architecture & Fall 2019 \\
+                CSCI 2461 & Computer Architecture & Fall 2019, Fall 2020\\
                 CSCI 1311 & Discrete Structures I & Spring 2019 \\
         \end{tabular}
         \sectionsep
